src/test/compile-fail/reserved-f128.rs
// error-pattern:reserved keyword

fn main() {
  let int f128 = 0;
}
